--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
     .about {
       position: relative;
       text-align: center;
-      margin: 0;
-      min-height: 250px;
+      margin: 0 10vw;
+      min-height: 50vh;
       font-size: 1.3rem;
       color: #1e343d;
       background: rgba(255,255,255,0.7);
@@ -57,58 +57,64 @@
     }
 
     .coming-soon {
-        position: relative;
-        text-align: center;
-        margin: 0;
-        min-height: 500px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      position: relative;
+      text-align: center;
+      margin: 0;
+      min-height: 50vh;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .coming-soon-bg {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 140%;
-        height: 220%;
-        transform: translate(-50%, -50%);
-        z-index: 0;
-        background: linear-gradient(135deg, rgb(15, 15, 15) 12%, rgb(10, 10, 10) 100%);
-        opacity: 0.95;
-        pointer-events: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 140%;
+      height: 220%;
+      transform: translate(-50%, -50%);
+      z-index: 0;
+      background: linear-gradient(135deg, rgb(15, 15, 15) 12%, rgb(10, 10, 10) 100%);
+      opacity: 0.95;
+      pointer-events: none;
     }
     .coming-soon-highlight {
-        position: relative;
-        z-index: 1;
-        display: inline-block;
-        font-size: 2.8rem;
-        font-weight: 900;
-        letter-spacing: 0.15em;
-        text-transform: uppercase;
-        background: linear-gradient(135deg, rgb(67, 118, 138) 12%, rgb(30, 52, 61) 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        filter: drop-shadow(0px 0px 8px rgba(255,255,255,0.1));
-        animation: about-text-wobble 12s infinite alternate cubic-bezier(.68,-0.55,.27,1.55);
-        transition: font-size 0.2s;
-        padding: 0.2em 0.6em;
-        border-radius: 1em;
+      position: relative;
+      z-index: 1;
+      display: inline-block;
+      font-size: 2.8rem;
+      font-weight: 900;
+      letter-spacing: 0.15em;
+      text-transform: uppercase;
+      background: #EEE;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      filter: drop-shadow(0px 0px 8px rgba(255,255,255,0.1));
+      animation: about-text-wobble 12s infinite alternate cubic-bezier(.68,-0.55,.27,1.55);
+      transition: font-size 0.2s;
+      padding: 0.2em 0.6em;
+      border-radius: 1em;
     }
     @keyframes about-text-wobble {
-        0% { transform: scale(1) rotate(-2deg);}
-        20% { transform: scale(1.05, 0.95) rotate(2deg);}
-        40% { transform: scale(0.97, 1.03) rotate(-1deg);}
-        60% { transform: scale(1.03, 0.97) rotate(1deg);}
-        80% { transform: scale(0.98, 1.02) rotate(-2deg);}
-        100% { transform: scale(1) rotate(2deg);}
+      0% { transform: scale(1) rotate(-2deg);}
+      20% { transform: scale(1.05, 0.95) rotate(2deg);}
+      40% { transform: scale(0.97, 1.03) rotate(-1deg);}
+      60% { transform: scale(1.03, 0.97) rotate(1deg);}
+      80% { transform: scale(0.98, 1.02) rotate(-2deg);}
+      100% { transform: scale(1) rotate(2deg);}
     }
 
 
     .games {
+      position: relative;
+      min-height: 50vh;
       padding: 20px;
       text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
     .games h2 {
       margin-bottom: 20px;
